@@ -4,27 +4,31 @@ import com.ccbuluo.business.constants.Constants;
 import com.ccbuluo.business.entity.BizServiceProjectcode;
 import com.ccbuluo.business.entity.RelProductPrice;
 import com.ccbuluo.business.platform.allocateapply.dao.BizAllocateApplyDao;
+import com.ccbuluo.business.platform.allocateapply.dao.BizAllocateapplyDetailDao;
+import com.ccbuluo.business.platform.allocateapply.dto.FindStockListDTO;
 import com.ccbuluo.business.platform.carconfiguration.dao.BasicCarmodelManageDao;
 import com.ccbuluo.business.platform.carconfiguration.entity.CarmodelManage;
 import com.ccbuluo.business.platform.carconfiguration.service.BasicCarmodelManageService;
 import com.ccbuluo.business.platform.carparts.dao.CarpartsProductPriceDao;
+import com.ccbuluo.business.platform.order.dao.BizServiceOrderDao;
 import com.ccbuluo.business.platform.projectcode.service.GenerateProjectCodeService;
-import com.ccbuluo.codec.Base64;
+import com.ccbuluo.business.platform.supplier.dao.BizServiceSupplierDao;
 import com.ccbuluo.core.common.UserHolder;
 import com.ccbuluo.core.entity.UploadFileInfo;
 import com.ccbuluo.core.service.UploadService;
 import com.ccbuluo.core.thrift.annotation.ThriftRPCClient;
 import com.ccbuluo.db.Page;
-import com.ccbuluo.http.*;
+import com.ccbuluo.http.StatusDto;
+import com.ccbuluo.http.StatusDtoThriftBean;
+import com.ccbuluo.http.StatusDtoThriftPage;
+import com.ccbuluo.http.StatusDtoThriftUtils;
 import com.ccbuluo.merchandiseintf.carparts.parts.dto.BasicCarpartsProductDTO;
-import com.ccbuluo.merchandiseintf.carparts.parts.dto.EditBasicCarpartsProductDTO;
 import com.ccbuluo.merchandiseintf.carparts.parts.dto.QueryCarpartsProductDTO;
 import com.ccbuluo.merchandiseintf.carparts.parts.dto.SaveBasicCarpartsProductDTO;
 import com.ccbuluo.merchandiseintf.carparts.parts.service.CarpartsProductService;
 import com.google.common.collect.Lists;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
-import org.springframework.web.bind.annotation.RequestBody;
 
 import javax.annotation.Resource;
 import java.io.UnsupportedEncodingException;
@@ -59,6 +63,12 @@ public class CarpartsProductPriceServiceImpl implements CarpartsProductPriceServ
     private BasicCarmodelManageDao basicCarmodelManageDao;
     @Resource(name = "carpartsProductPriceServiceImpl")
     private CarpartsProductPriceService carpartsProductServiceImpl;
+    @Resource
+    private BizAllocateapplyDetailDao bizAllocateapplyDetailDao;
+    @Resource
+    private BizServiceSupplierDao bizServiceSupplierDao;
+    @Resource
+    private BizServiceOrderDao bizServiceOrderDao;
 
     /**
      * 查询零配件的信息和价格
@@ -173,15 +183,16 @@ public class CarpartsProductPriceServiceImpl implements CarpartsProductPriceServ
         StatusDto<SaveBasicCarpartsProductDTO> carpartsProductStatusDto = StatusDtoThriftUtils.resolve(carpartsProductdetail, SaveBasicCarpartsProductDTO.class);
         SaveBasicCarpartsProductDTO carpartsProductDTO = carpartsProductStatusDto.getData();
         String fitCarmodel = carpartsProductDTO.getFitCarmodel();
-        if(StringUtils.isNotBlank(fitCarmodel)){
-            Long fitCarmodelId = Long.valueOf(fitCarmodel);
-            List<CarmodelManage> carmodelManages = basicCarmodelManageDao.queryPartModel(List.of(fitCarmodelId));
-            carmodelManages.forEach(item->{
-                Long carbrandId = item.getCarbrandId();
-                if(carbrandId.equals(fitCarmodelId)){
-                    carpartsProductDTO.setFitCarmodel(item.getCarmodelName());
-                }
-            });
+        // 查询车型的名称
+        if(StringUtils.isBlank(fitCarmodel)){
+            return carpartsProductStatusDto;
+        }
+        List<String> fitCarmodelStrIds = Arrays.asList(fitCarmodel.split(Constants.COMMA));
+        List<Long> fitCarmodelLongIds = fitCarmodelStrIds.stream().filter(StringUtils::isNotBlank).map(Long::parseLong).collect(Collectors.toList());
+        if(fitCarmodelLongIds != null && fitCarmodelLongIds.size() > 0){
+            List<CarmodelManage> carmodelManages = basicCarmodelManageDao.queryPartModel(fitCarmodelLongIds);
+            String fitCarmodelName = StringUtils.join(carmodelManages.stream().map(CarmodelManage::getCarmodelName).toArray(), Constants.COMMA);
+            carpartsProductDTO.setFitCarmodel(fitCarmodelName);
         }
         return carpartsProductStatusDto;
     }
@@ -239,13 +250,27 @@ public class CarpartsProductPriceServiceImpl implements CarpartsProductPriceServ
      * @date 2018-11-12 19:52:44
      */
     @Override
-    public  StatusDto<Page<BasicCarpartsProductDTO>> queryCarpartsProductList(String keyword, Integer offset, Integer pageSize) {
-        StatusDto<Page<BasicCarpartsProductDTO>> list = StatusDtoThriftUtils.resolve(carpartsProductService.queryCarpartsProductList(keyword, offset, pageSize),BasicCarpartsProductDTO.class);
+    public StatusDto<Page<BasicCarpartsProductDTO>> queryCarpartsProductList(String keyword, Integer offset, Integer pageSize) {
+        StatusDto<Page<BasicCarpartsProductDTO>> basicCarpartsProductDTO = StatusDtoThriftUtils.resolve(carpartsProductService.queryCarpartsProductList(keyword, offset, pageSize),BasicCarpartsProductDTO.class);
         // 把车型id转换成车型名字
-        if(null != list) {
-            basicCarmodelManageService.buildCarModeName(list.getData().getRows());
+        if(basicCarpartsProductDTO != null) {
+            Optional.ofNullable(basicCarpartsProductDTO.getData().getRows()).ifPresent(a ->{
+                a.forEach(item->{
+                    String fitCarmodel = item.getFitCarmodel();
+                    if(StringUtils.isBlank(fitCarmodel)){
+                        return;
+                    }
+                    List<String> fitCarmodelStrIds = Arrays.asList(fitCarmodel.split(Constants.COMMA));
+                    List<Long> fitCarmodelLongIds = fitCarmodelStrIds.stream().filter(StringUtils::isNotBlank).map(Long::parseLong).collect(Collectors.toList());
+                    if(fitCarmodelLongIds != null && fitCarmodelLongIds.size() > 0){
+                        List<CarmodelManage> carmodelManages = basicCarmodelManageDao.queryPartModel(fitCarmodelLongIds);
+                        String fitCarmodelName = StringUtils.join(carmodelManages.stream().map(CarmodelManage::getCarmodelName).toArray(), Constants.COMMA);
+                        item.setFitCarmodel(fitCarmodelName);
+                    }
+                });
+            });
         }
-        return list;
+        return basicCarpartsProductDTO;
     }
 
     /**
@@ -264,6 +289,39 @@ public class CarpartsProductPriceServiceImpl implements CarpartsProductPriceServ
             basicCarpartsProductDTOS = data.getRows();
         }
         return StatusDto.buildDataSuccessStatusDto(basicCarpartsProductDTOS);
+
+    }
+
+    /**
+     * 删除零配件
+     * @param productNo 零配件code
+     * @author zhangkangjian
+     * @date 2018-11-14 15:42:34
+     */
+    @Override
+    public StatusDto<String> deleteCarpartsProduct(String productNo) {
+
+        Boolean resultRelStock =  bizAllocateApplyDao.checkProductRelStock(productNo);
+        if(resultRelStock){
+            return StatusDto.buildFailureStatusDto("该零配件已与库存建立关联关系！");
+        }
+        // 查询申请列表
+        Boolean resultApply = bizAllocateapplyDetailDao.checkProductRelApply(productNo);
+        if(resultApply){
+            return StatusDto.buildFailureStatusDto("该零配件已与申请建立关联关系！");
+        }
+        // 查询关联供应商
+        Boolean resultRelSupplier = bizServiceSupplierDao.checkProductRelSupplier(productNo);
+        if(resultRelSupplier){
+            return StatusDto.buildFailureStatusDto("该零配件已与供应商建立关联关系！");
+        }
+        // 查询维修单详单
+        Boolean resultRelOrder = bizServiceOrderDao.checkProductRelOrder(productNo);
+        if(resultRelOrder){
+            return StatusDto.buildFailureStatusDto("该零配件已与维修单建立关联关系！");
+        }
+        carpartsProductService.deleteCarpartsProduct(productNo);
+        return StatusDto.buildSuccessStatusDto();
 
     }
 
